--- a/WaterCompany/Views/Home/Index.cshtml
+++ b/WaterCompany/Views/Home/Index.cshtml
@@ -1,3 +1,36 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<br />
+    <main>
+        <div class="big-wrapper light">
+            <img src="~/images/shape.png" alt="" class="shape" />
+
+            <div class="showcase-area">
+                <div class="container">
+                    <div class="left">
+                        <div class="big-title">
+                            <h1>Drink Water,</h1>
+                            <h1>Is Good.</h1>
+                        </div>
+                        <p class="text">
+                            &nbsp; Water is an essential nutrient for life. About 60% of the human body is water. We depend on water consumption to survive. <br />
+                            &nbsp; That's why drinking water is essential and maintaining a good state of hydration is a recommendation in all situations.
+                        </p>
+                        <div class="cta">
+                            <a href="#" class="btn"> <i class="fa-solid fa-house"></i>Get started</a> <!-- Mandar para a página Login-->
+                        </div>
+                    </div>
+
+                    <div class="right">
+                        <img src="~/images/water.png" alt="Water Image" class="person" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+<br /><br />
+
+
+<script src="~/js/site.js" asp-append-version="true"></script>
+<link rel="stylesheet" href="~/css/style.css" />
