SeedDb Update Loading Screen Back To Top Button Footer Icons Layout Updated

--- a/WaterCompany/Views/Home/Index.cshtml
+++ b/WaterCompany/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                             &nbsp; That's why drinking water is essential and maintaining a good state of hydration is a recommendation in all situations.
                         </p>
                         <div class="cta">
-                            <a href="#" class="btn"> <i class="fa-solid fa-house"></i>Get started</a> <!-- Mandar para a página Login-->
+                            <a href="#" class="btn" style="padding: 0.9rem 1.9rem;"> <i class="fa-solid fa-house"></i>Get started</a> <!-- Mandar para a página Login-->
                         </div>
                     </div>
 
@@ -28,5 +28,4 @@
         </div>
     </main>
 <br /><br />
-
 <link rel="stylesheet" href="~/css/style.css" />
