--- a/WaterCompany/wwwroot/css/site.css
+++ b/WaterCompany/wwwroot/css/site.css
@@ -1,13 +1,4 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-/*a.navbar-brand {
-white-space: normal;
-text-align: center;
-word-break: break-all;
-}*/
-
-/* Provide sufficient contrast against white background */
+﻿/* Provide sufficient contrast against white background */
 a {
     color: #0366d6;
 }
@@ -17,12 +8,6 @@ a {
     background-color: #1b6ec2;
     border-color: #1861ac;
 }
-
-/*.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-color: #fff;
-background-color: #1b6ec2;
-border-color: #1861ac;
-}*/
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -536,4 +521,102 @@ dd {
     margin: 2px 0px;
     padding: 5px 0;
     text-align: center;
+}
+
+.scrollTop {
+    position: fixed;
+    bottom: 800px;
+    right: 40px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-size: 40px;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    z-index: 100000;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+    .scrollTop.active {
+        bottom: 40px;
+        visibility: visible;
+        opacity: 1;
+    }
+
+    /*Loading Screen*/
+
+.loader {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    border: 4px solid #fff;
+    animation: loader 2s infinite ease;
+}
+
+.loader-wrapper {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #64bcf4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader-inner {
+    vertical-align: top;
+    display: inline-block;
+    width: 100%;
+    background-color: #fff;
+    animation: loader-inner 5s infinite ease-in;
+}
+
+@keyframes loader {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(180deg);
+    }
+
+    50% {
+        transform: rotate(180deg);
+    }
+
+    75% {
+        transform: rotate(360deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes loader-inner {
+    0% {
+        height: 40%;
+    }
+
+    25% {
+        height: 70%;
+    }
+
+    50% {
+        height: 100%;
+    }
+
+    75% {
+        height: 100%;
+    }
+
+    100% {
+        height: 100%;
+    }
 }
