--- a/WaterCompany/Views/Clients/Edit.cshtml
+++ b/WaterCompany/Views/Clients/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model WaterCompany.Data.Entities.Client
+﻿@model WaterCompany.Models.ClientViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -11,9 +11,17 @@
 <br />
 <div class="row centerform">
     <div class="col-md-12">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ImageUrl" />
+            <div class="form-group">
+                @if (!string.IsNullOrEmpty(Model.ImageUrl))
+                {
+                    <img class="user-avatar-md rounded-circle" src="@Url.Content(Model.ImageUrl)" alt="Image" style="width: auto; height: 100px;" />
+                }
+            </div>
+            <br />
             <div class="form-group">
                 <label asp-for="ClientName" class="control-label"></label>
                 <input asp-for="ClientName" class="form-control" />
@@ -43,6 +51,11 @@
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input asp-for="ImageFile" class="form-control" type="file" placeholder="" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
                 <br />
             </div>
             <div class="form-group form-check">
@@ -60,5 +73,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
