--- a/WaterCompany/Views/Clients/Index.cshtml
+++ b/WaterCompany/Views/Clients/Index.cshtml
@@ -35,6 +35,9 @@
                     @Html.DisplayNameFor(model => model.Email)
                 </th>
                 <th>
+                    @Html.DisplayNameFor(model => model.ImageUrl)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.IsAvailable)
                 </th>
                 <th></th>
@@ -61,6 +64,12 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @if (!string.IsNullOrEmpty(item.ImageUrl))
+                        {
+                            <img class="user-avatar-md rounded-circle" src="@Url.Content(item.ImageUrl)" alt="Image" style="width: auto; height: 65px;" />
+                        }
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.IsAvailable)
@@ -94,6 +103,9 @@
                     @Html.DisplayNameFor(model => model.Email)
                 </th>
                 <th>
+                    @Html.DisplayNameFor(model => model.ImageUrl)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.IsAvailable)
                 </th>
                 <th></th>
@@ -113,6 +125,7 @@
 @section Scripts{
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#MyTable').DataTable();
