--- a/WaterCompany/Views/Home/Privacy.cshtml
+++ b/WaterCompany/Views/Home/Privacy.cshtml
@@ -10,7 +10,7 @@
 </p>
 <p class="text" style="color: #424242">
     The Next Level considers the privacy and security of user information an
-    important component of the service offered at its website, https://nextlevel.azurewebsites.net/ (Site). The following
+    important component of the service offered at its website, https://nextlevel25853.azurewebsites.net/ (Site). The following
     information explains how The Next Level collects and uses information obtained from its registered users in
     connection with services available at the Site.
 </p>
@@ -54,7 +54,7 @@
     We may receive a confirmation when you open an e-mail from The Next Level if your computer supports this
     type of program, in order to help us make e-mails more interesting and helpful. We may also send out emails with
     news or promotions. If you do not want to receive e-mail or other mail from us, please notify us by e-mail at
-    nextlevelstaf@outlook.com and include sufficient information for us to identify your account.
+    nextlevelstaff@outlook.com and include sufficient information for us to identify your account.
 </p>
 <h2 style="color: #424242"><b>Cookies</b></h2>
 <p class="text" style="color: #424242">
