--- a/WaterCompany/Views/Clients/Details.cshtml
+++ b/WaterCompany/Views/Clients/Details.cshtml
@@ -19,13 +19,10 @@
     <div class="col-md-12">
         <dl class="row data_table" style="padding-left: 35px;">
             <dt class="col-3">
-                @Html.DisplayNameFor(model => model.ImageUrl)
+                @Html.DisplayNameFor(model => model.ImageFullPath)
             </dt>
             <dd class="col-9">
-                @if (!string.IsNullOrEmpty(Model.ImageUrl))
-                {
-                    <img class="user-avatar-md rounded-circle" src="@Url.Content(Model.ImageUrl)" alt="Image" style="width: auto; height: 100px;" />
-                }
+                <img class="user-avatar-md" src="@Url.Content(Model.ImageFullPath)" alt="Image" style="width: auto; height: 70px;" />
             </dd>
             <dt class="col-3">
                 @Html.DisplayNameFor(model => model.ClientName)
