--- a/WaterCompany/wwwroot/css/site.css
+++ b/WaterCompany/wwwroot/css/site.css
@@ -75,7 +75,7 @@ body {
     float: left;
     position: relative;
     padding-bottom: 0px;
-    background-color: #64bcf4;
+    background-color: #007bff;
 }
 
 .content {
