--- a/WaterCompany/wwwroot/css/site.css
+++ b/WaterCompany/wwwroot/css/site.css
@@ -620,3 +620,11 @@ dd {
         height: 100%;
     }
 }
+
+.divider:after,
+.divider:before {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #eee;
+}
